Fixed random spacing of the default_function textbox

--- a/static/gui/static/css/gui_update.css
+++ b/static/gui/static/css/gui_update.css
@@ -62,10 +62,6 @@
     display: inline-block;
 }
 
-input[type="text"] {
-    margin-left: 10px;
-}
-
 table {
     text-align: center;
 }
